fusion de tramites, y funcioando asociacion de cita con solicitud